# uav-control-lq

./: disp_log.py
.devcontainer/: Dockerfile  compose.wsl.yaml
math/: K.txt  autodiff_example.jl  sim_uav.m  uav_dynamics.m  uav_lqr.jl  uav_lqr.m  uav_lqr.mlx
uav_lqr/: CMakeLists.txt  package.xml
uav_lqr/src/: offboard_control.py
